# contact-list

./: .ants_review_falsepos.jsonl  .gitignore  CHANGELOG.md  CLAUDE.md  DESIGN.md  README.md  ROADMAP.md  app.py  browser.py  config.py  db.py  google_auth.py  google_sync.py  importer.py  launcher.py  local-ci.sh  models.py  phoneutil.py  photos.py  pyproject.toml  requirements.txt  resources.py  run.sh  server_control.py  settings.py  tray.py  vcard.py
.ants/: project.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-07-10-standalone-launchers.md
docs/specs/: 2026-07-01-contact-photos-design.md  2026-07-01-import-export-merge-design.md  2026-07-02-two-way-google-sync.md  2026-07-03-favourite-contacts-design.md  2026-07-03-tags-labels-design.md  2026-07-04-photo-thumbnails-design.md  2026-07-05-page-construction-standard.md  2026-07-05-server-restart-control.md  2026-07-10-standalone-launchers-design.md  2026-07-12-system-tray-icon.md
docs/superpowers/plans/: 2026-07-01-settings-page.md  2026-07-12-system-tray-icon.md
docs/superpowers/specs/: 2026-06-30-settings-page-design.md
migrations/: 001_initial.sql  002_add_indexes.sql  004_import_profiles.sql  005_photos.sql  006_contact_edits.sql  007_favourites.sql  008_tags.sql
packaging/: build-linux.sh  build-macos.sh  build-windows.sh  check-version-drift.sh  contact-list.spec  make-icons.sh  wine-setup.sh
routes/: contacts.py  import_export.py  merge.py  settings.py  sync.py
static/: app.js  style.css
templates/: _macros.html  base.html  birthdays.html  contact_detail.html  contact_form.html  contacts.html  duplicates.html  error.html  import.html  merge.html  server_action.html  settings.html  sync.html
tests/: conftest.py  test_browser.py  test_hardening.py  test_import.py  test_import_routes.py  test_importer.py  test_models.py  test_packaging.py  test_photos.py  test_routes.py  test_server_control.py  test_settings.py  test_tags.py  test_tray.py  test_two_way_sync.py  test_vcard.py
